Start shop/inventory system
- Cosmetics available to buy, roses count update
- Player's cosmetics save between session
- Player's cosmetics appear in inventory and not in the shop
- Update README